--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,7 @@
   "content_scripts": [
     {
       "matches": ["https://www.youtube.com/*", "https://youtube.com/*"],
-      "js": ["index.js"]
+      "js": ["dist/index.js"]
     }
   ],
   "icons": {
