Add release note

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -41,6 +41,9 @@ jobs:
           addon-id: "pr0verter@gmail.com"
           addon-path: "youtube-better-ambient.zip"
           source-path: "source.zip"
+          release-note: |
+            Fixes
+            - Disable native ambient mode to fix extension displaying properly
           approval-note: |
             The source project requires Node.js 20.x and npm.
             To generate the source code, please run "npm run build"
