--- a/package.json
+++ b/package.json
@@ -13,10 +13,19 @@
     "dist"
   ],
   "scripts": {
-    "build": "rslib build",
-    "dev": "rslib build --watch"
+    "build": "rsbuild build",
+    "dev": "rsbuild dev",
+    "start": "rsbuild dev",
+    "start:firefox": "web-ext run --source-dir ./"
   },
   "devDependencies": {
-    "@rslib/core": "^0.9.2"
+    "@rsbuild/core": "^1.4.3",
+    "@tailwindcss/postcss": "^4.1.11",
+    "tailwindcss": "^4.1.11"
+  },
+  "dependencies": {
+    "@rsbuild/plugin-react": "1.3.3",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0"
   }
 }
