Update rsbuild and add lodash throttle

--- a/package.json
+++ b/package.json
@@ -19,12 +19,13 @@
     "start:firefox": "web-ext run --source-dir ./"
   },
   "devDependencies": {
-    "@rsbuild/core": "^1.4.3",
+    "@rsbuild/core": "^1.4.12",
     "@tailwindcss/postcss": "^4.1.11",
-    "tailwindcss": "^4.1.11"
+    "tailwindcss": "^4.1.11",
+    "@rsbuild/plugin-react": "1.4.2"
   },
   "dependencies": {
-    "@rsbuild/plugin-react": "1.3.3",
+    "lodash.throttle": "^4.1.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   }
